--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -7,7 +7,20 @@
 }
 
 .input {
-  height: 30px;
+  height: 50px;
+  outline: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 15px;
+  color: #757575;
+  font-family: inherit;
+  padding-left: 12px;
+}
+
+
+.filter{
+    height: 30px;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   cursor: pointer;
